--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,13 +3,13 @@
 name="MetaQuest"
 platform="Android"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Downloads/questao-de-tempo.apk"
+export_path="builds/17-10_08.48.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -40,8 +40,8 @@ architectures/x86=false
 architectures/x86_64=false
 version/code=1
 version/name=""
-package/unique_name="com.example.$genname"
-package/name=""
+package/unique_name="org.uspbcc.matteroftime"
+package/name="Questão de Tempo"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
@@ -55,7 +55,7 @@ launcher_icons/adaptive_background_432x432=""
 launcher_icons/adaptive_monochrome_432x432=""
 graphics/opengl_debug=false
 shader_baker/enabled=false
-xr_features/xr_mode=0
+xr_features/xr_mode=1
 gesture/swipe_to_dismiss=false
 screen/immersive_mode=true
 screen/edge_to_edge=false
@@ -222,3 +222,28 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+xr_features/enable_khronos_plugin=false
+khronos_xr_features/vendors=0
+khronos_xr_features/htc/tracker=0
+khronos_xr_features/htc/lip_expression=0
+xr_features/enable_lynx_plugin=false
+xr_features/enable_magicleap_plugin=false
+xr_features/enable_meta_plugin=true
+meta_xr_features/eye_tracking=1
+meta_xr_features/face_tracking=1
+meta_xr_features/body_tracking=1
+meta_xr_features/hand_tracking=2
+meta_xr_features/hand_tracking_frequency=0
+meta_xr_features/passthrough=1
+meta_xr_features/render_model=1
+meta_xr_features/use_overlay_keyboard=false
+meta_xr_features/use_experimental_features=false
+meta_xr_features/boundary_mode=0
+meta_xr_features/instant_splash_screen=true
+meta_xr_features/quest_1_support=true
+meta_xr_features/quest_2_support=false
+meta_xr_features/quest_3_support=false
+meta_xr_features/quest_pro_support=false
+xr_features/enable_pico_plugin=false
+pico_xr_features/face_tracking=0
+pico_xr_features/hand_tracking=1
